--- a/approved.yaml
+++ b/approved.yaml
@@ -50,7 +50,7 @@ pathfinderofficial:
 pathfinder2eofficial:
   - "Pathfinder Second Edition by Roll20"
   - "Pathfinder Second Edition by Roll20"
-  - "Pathfinder 2nd Edition"
+  - "Pathfinder Second Edition"
 
 starfinder:
   - "Starfinder by Roll20"
@@ -120,11 +120,43 @@ yatzoidofficial:
   - Yatzoid
 
 #Community Sheets
+#2D20
+conan2d20:
+  - "conan-2d20"
+  - "Conan"
+  - "2d20"
+
+infinity2d20:
+  - "Infinity-2d20"
+  - "Infinity"
+  - "2d20"
+
+mutantchronicles3rd:
+  - "mutant_cronicles_3"
+  - "Mutant Chronicles 3rd Edition"
+  - "2d20"
+
+startrek2d20:
+  - "Star Trek Adventures 2d20"
+  - "Star Trek Adventures"
+  - "2d20"
+
 #13th AGE
 13thageadvanced:
   - "13th_Age-neovatar"
   - "13th Age Legacy"
   - "Archmage Engine"
+
+#AGE SYSTEM
+agesystem:
+  - "AGE System"
+  - "AGE System"
+  - "AGE System"
+
+dragonageBR:
+  - "Dragon-Age-RPG-PT-BR"
+  - "Dragon Age RPG (Portuguese)"
+  - "AGE System"
 
 #ANIMA
 anima:
@@ -349,10 +381,30 @@ thelaundry:
   - "The Laundry"
   - "Basic Roleplaying System"
 
+runequest3ed:
+  - "Runequest3"
+  - "RuneQuest 3rd Edition"
+  - "Basic Roleplaying System"
+
 runequest6:
   - "Runequest_6"
   - "RuneQuest 6th Edition"
-  - "Basic Role-Playing"
+  - "Basic Roleplaying System"
+
+runequest6fr:
+  - "Runequest_6_FR"
+  - "RuneQuest: 6th Edition (French)"
+  - "Basic Roleplaying System"
+
+runequest6es:
+  - "Runequest_6_ES"
+  - "RuneQuest 6th Edition (Spanish)"
+  - "Basic Roleplaying System"
+
+runequestglorantha:
+  - RunequestGQS
+  - RuneQuest Glorantha
+  - "Basic Roleplaying System"
 
 stormbringer:
   - "Stormbringer"
@@ -366,6 +418,11 @@ betterangels:
   - "Better Angels"
 
 #BURNING WHEEL
+burningwheel:
+  - "Burning Wheel"
+  - "Burning Wheel"
+  - "The Burning Wheel"
+
 mouseguard:
   - "MouseGuard"
   - "Mouse Guard"
@@ -376,10 +433,21 @@ torchbearer:
   - "Torchbearer"
   - "The Burning Wheel"
 
+#BURIED TREASURES
+buriedtreasures: 
+  - "Buried Treasures"
+  - "Buried Treasures"
+  - "Buried Treasures"
+
 #CHRONICLE SYSTEM
 asoiaf:
   - "Song of Ice and Fire Roleplaying"
   - "A Song of Ice and Fire"
+  - "Chronicle System"
+
+songoficeandfire:
+  - "A Song of Ice and Fire"
+  - "Song of Ice and Fire Roleplaying"
   - "Chronicle System"
 
 #CONTINUUM
@@ -418,12 +486,43 @@ thestrangemutlirecursion:
   - "Cypher System"
 
 #D6
+d6fantasy:
+  - "D6_Fantasy"
+  - "D6 Fantasy"
+  - "D6"
+
+d6space:
+  - "D6_Space"
+  - "D6 Space"
+  - "D6"
+
+starwars30th:
+  - Star Wars 30th Anniversary Edition
+  - Star Wars 30th Anniversary Edition
+  - D6
+
 starwarsd6:
   - "D6StarWars"
   - "Star Wars: (D6) West End Games"
   - "D6 System"
 
-#D20 System
+#D20 MODERN
+d20modern:
+  - "d20 Modern"
+  - "d20 Modern"
+  - "d20 Modern"
+
+masseffect:
+  - "Mass Effect"
+  - "Mass Effect"
+  - "d20 Modern"
+
+narutod20modern:
+  - "Naruto d20 Modern"
+  - "Naruto"
+  - "d20 Modern"
+
+#D20 SYSTEM
 castlesandcrusades:
   - "Castles&Crusades"
   - "Castles & Crusades"
@@ -454,12 +553,29 @@ theblackhack:
 adndte:
   - "AD&D_2E"
   - "Advanced 2nd Edition (Simple Sheet)"
-  - "Advanced Dungeons & Dragons 2nd Edition"
+  - "Advanced Dungeons & Dragons"
 
 adnd2erevised:
   - "AD&D 2E Revised"
   - "Advanced 2nd Edition"
-  - "Advanced Dungeons & Dragons 2nd Edition"
+  - "Advanced Dungeons & Dragons"
+
+#DAS SCHWARZE AUGE 4th EDITION
+dasschwarzeauge:
+  - "Das_Schwarze_Auge_4-1"
+  - "Das Schwarze Auge 4th Edition (German)"
+  - "Das Schwarze Auge"
+
+#DAS SCHWARZE AUGE 5th EDITION
+dasschwarzeauge5:
+  - "Das_Schwarze_Auge_5"
+  - "Das Schwarze Auge 5th Edition (German)"
+  - "Das Schwarze Auge"
+
+dasschwarzeauge5tsa:
+  - "Das_Schwarze_Auge_5_Tsa_Edition"
+  - "Das Schwarze Auge 5th Edition (Tsa Edition)"
+  - "Das Schwarze Auge"
 
 #DUNGEONS & DRAGONS BASIC SET
 becmidnd:
@@ -559,6 +675,11 @@ elderscrolls:
 dcc:
   - "DCC"
   - "Dungeon Crawl Classics"
+  - "Dungeon Crawl Classics"
+
+dcctabbed:
+  - "DCC_Tabbed_Sheet"
+  - "Dungeon Crawl Classics (Tabbed)"
   - "Dungeon Crawl Classics"
 
 #ECLIPSE PHASE
@@ -687,12 +808,22 @@ psipunk:
   - "The Fugue"
 
 #GUMSHOE
+nightblackagents:
+  - "Night Black Agents gumshoe"
+  - "Night Black Agents"
+  - "GUMSHOE"
+
 trailofcth:
   - "Trail of Cthulhu"
   - "Trail of Cthulhu"
   - "GUMSHOE"
 
 #GURPS
+conspiracyx:
+  - ConspiracyX
+  - Conspiracy X
+  - "GURPS"
+
 gurps:
   - "GURPS"
   - "GURPS"
@@ -709,6 +840,12 @@ hackmaster5e:
   - "HackMaster 5th Edition"
   - "HackMaster 5th Edition"
 
+#In Nomine Satanis Third Edition
+innominesatanis:
+  - "INS-MV_3E"
+  - "In Nomine Satanis / Magna Veritas Third Edition"
+  - "In Nomine Satanis Third Edition"
+
 #INTERLOCK SYSTEM
 cyberpunk2020:
   - "Cyberpunk 2020"
@@ -719,12 +856,6 @@ kromore:
   - "Kromore"
   - "Kromore"
   - "Kromore"
-
-#LEGEND OF THE FIVE RINGS
-legendofthefiverings:
-  - "L5R"
-  - "Legend of the Five Rings: 4th Edition"
-  - "Legend of the Five Rings 4th Edition"
 
 #LES CHANTS DE LOSS
 leschantsdeloss:
@@ -745,15 +876,40 @@ marvelsh:
   - "Marvel Superheroes"
 
 #MEGAVERSAL
+palladiumfantasy1e:
+  - "Palladium Fantasy 1E"
+  - "Palladium Fantasy 1E"
+  - "Megaversal"
+
 palladium:
   - "Palladium Megaverse"
   - "Palladium Megaverse"
   - "Megaversal"
 
+palladiumriftsnew:
+  - "Palladium-Rifts"
+  - "Palladium Rifts"
+  - "Megaversal"
+
 #MICROLITE20
+beacon:
+  - "Beacon"
+  - "Beacon"
+  - "Microlite20"
+
 microlite20:
   - "Microlite20"
   - "Microlite20"
+  - "Microlite20"
+
+microluxe20:
+  - "microluxe20"
+  - "Microluxe20"
+  - "Microlite20"
+
+spylite:
+  - "Spylite"
+  - "Spylite"
   - "Microlite20"
 
 #MONGOOSE TRAVELLER
@@ -768,10 +924,15 @@ mongoosetraveller2e:
   - "Mongoose Traveller"
 
 #MUTANTS AND MASTERMINDS
+mamm2e:
+  - "mutants-and-masterminds-2e-master"
+  - "Mutants and Masterminds 2nd Edition"
+  - "Mutants and Masterminds"
+
 mandm3e:
   - "Mutants and Masterminds 3E"
   - "Mutants and Masterminds 3rd Edition"
-  - "Mutants and Masterminds 3rd Edition"
+  - "Mutants and Masterminds"
 
 #NARRATIVES UNLIMITED D10
 narrativesunlimitedd10:
@@ -813,11 +974,27 @@ ptu:
   - "Pokemon Tabletop United"
   - "Pokemon Tabletop United"
 
-##PORTES MONSTRES TRESORS
+#PORTES MONSTRES TRESORS
 portesmonstrestresors:
   - "PortesMonstresTresors"
   - "Portes Monstres Tresors (French)"
   - "Portes Monstres Tresors"
+
+#ROLL AND KEEP SYSTEM
+legendofthefiverings:
+  - "L5R"
+  - "Legend of the Five Rings: 4th Edition"
+  - "Roll-and-Keep System"
+
+L5R5thedition:
+  - "L5R 5th Edition Unofficial"
+  - "Legend of the Five Rings 5th Edition"
+  - "Roll-and-Keep System"
+
+l5rfantasyflight:
+  - "L5R Fantasy Flight Games"
+  - "Legend of the Five Rings (Fantasy Flight Games)"
+  - "Roll-and-Keep System"
 
 #ROLEMASTER
 rolemaster1e:
@@ -831,9 +1008,19 @@ rolemasterstandard:
   - "Rolemaster Standard System"
 
 #SAVAGE WORLDS
+exo2933:
+  - "Exo 2933"
+  - "Exo 2933"
+  - "Savage Worlds"
+
 savageworlds:
   - "SavageWorlds"
   - "Savage Worlds"
+  - "Savage Worlds"
+
+savagefr:
+  - "SavageWorldsFrench"
+  - "Savage Worlds (Savage Worlds Deluxe Edition)"
   - "Savage Worlds"
 
 savageworldstwo:
@@ -841,7 +1028,33 @@ savageworldstwo:
   - "Savage Worlds (Tabbed Layout)"
   - "Savage Worlds"
 
-#SHADOWRUN 
+savageworldsfo:
+  - "SavageWorlds - Fallout fan conversion"
+  - "Savage Worlds: Fallout"
+  - "Savage Worlds"
+
+#SHADOWRUN 2ND EDITION
+shadowrun2e:
+  - "Shadowrun2e"
+  - "Shadowrun 2nd Edition"
+  - "Shadowrun"
+
+#SHADOWRUN 5TH EDITION
+shadowrun5thedition:
+  - "Shadowrun5thEdition"
+  - "Shadowrun 5th Edition"
+  - "Shadowrun"
+
+shadowrun5th: 
+  - "Shadowrun5th"
+  - "Shadowrun 5th Edition (Advanced)"
+  - "Shadowrun"
+
+#SHADOWRUN ANARCHY
+newshadowrunanarchy:
+  - "ShadowrunAnarchy"
+  - "Shadowrun Anarchy"
+  - "Shadowrun Anarchy"
 
 #SIMPLE SYSTEM
 simplesystem:
@@ -861,10 +1074,121 @@ starswithoutnumber:
   - "Stars Without Number"
   - "Stars Without Number"
 
+starswithoutnumberrevised:
+  - "Stars_Without_Number_Revised"
+  - "Stars Without Number (Revised)"
+  - "Stars Without Number"
+
+silentlegions:
+  - "Silent Legions"
+  - "Silent Legions"
+  - "Stars Without Number"
+
+otherdust:
+  - "Other_Dust"
+  - "Other Dust"
+  - "Stars Without Number"
+
+#STORYTELLER SYSTEM
+aberrant:
+  - "AEON-Aberrant"
+  - "Aberrant"
+  - "Storyteller System"
+
+adventureww:
+  - "Adventure!"
+  - "Adventure!"
+  - "Storyteller System"
+
+cwod:
+  - CWorldofDarkness
+  - Classic World of Darkness
+  - "Storyteller System"
+
+cwodchangeling:
+  - "CWOD-Changeling"
+  - "Changeling: The Dreaming"
+  - "Storyteller System"
+
+changeling20:
+  - CWOD-C20
+  - "Changeling 20th Anniversary Edition"
+  - "Storyteller System"
+
+cwoddemonthefallen:
+  - "CWOD-Demon"
+  - "Demon: The Fallen"
+  - "Storyteller System"
+
+cwodexalted:
+  - "CWOD-Exalted"
+  - "Exalted"
+  - "Storyteller System"
+
+hunterthereckoning:
+  - "CWOD-Hunter"
+  - "Hunter: The Reckoning"
+  - "Storyteller System"
+
+mage2e:
+  - "CWOD-Mage"
+  - "Mage: The Ascension"
+  - "Storyteller System"
+
+cwodm20:
+  - "CWOD-M20"
+  - "Mage: The Ascension 20th Anniversary Edition"
+  - "Storyteller System"
+
+scion:
+  - "Scion"
+  - "Scion"
+  - "Storyteller System"
+
+cwodv20:
+  - "CWOD-V20"
+  - "Vampire: The Masquerade 20th Anniversary Edition"
+  - "Storyteller System"
+
+darkagesvampire:
+  - "CWOD-DAV20"
+  - "Vampire: Dark Ages"
+  - "Storyteller System"
+
+vampire2e:
+  - "CWOD-Vampire"
+  - "Vampire: The Masquerade"
+  - "Storyteller System"
+
+cwodwerewolfv20:
+  - "CWOD-W20"
+  - "Werewolf: The Apocalypse 20th Anniversary Edition"
+  - "Storyteller System"
+
+werewolfrokea:
+  - "CWOD-Werewolf-Rokea"
+  - "Werewolf: The Apocalypse - Rokea"
+  - "Storyteller System"
+
+wraithoblivion:
+  - CWOD-Wr20
+  - "Wraith: The Oblivion"
+  - "Storyteller System"
+
+godmachine:
+  - "The God Machine Chronicle (nWoD)"
+  - "World of Darkness: The God Machine Chronicle"
+  - "Storyteller System"
+
 #STORYTELLING SYSTEM
 nwodchangeling:
   - "NWOD-Changeling"
-  - "Changeling: The Lost (cWoD)"
+  - "Changeling: The Lost"
+  - "Storytelling System"
+
+nwoddemon:
+  - "NWOD-Demon"
+  - "Demon: The Descent"
   - "Storytelling System"
 
 exalted2e:
@@ -872,50 +1196,51 @@ exalted2e:
   - "Exalted 2nd Edition"
   - "Storytelling System"
 
-nwodhunter:
-  - "NWOD-Hunter The Vigil"
-  - "Hunter: The Vigil (nWoD)"
+exalted3e:
+  - "Exalted 3"
+  - "Exalted 3rd Edition"
   - "Storytelling System"
 
-mage2e:
-  - "CWOD-Mage"
-  - "Mage: The Ascension (cWoD)"
+hunterthereckoning:
+  - "CWOD-Hunter"
+  - "Hunter: The Reckoning (cWoD)"
+  - "Storytelling System"
+
+nwodhunter:
+  - "NWOD-Hunter The Vigil"
+  - "Hunter: The Vigil"
   - "Storytelling System"
 
 nwodmage:
   - "NWOD-Mage"
-  - "Mage: The Awakening (nWoD)"
+  - "Mage: The Awakening"
   - "Storytelling System"
 
-vampire2e:
-  - "CWOD-Vampire"
-  - "Vampire: The Masquerade (cWoD)"
+nwodmage2e:
+  - "NWOD-Mage2e"
+  - "Mage: The Awakening 2nd Edition"
+  - "Storytelling System"
+
+streetfighterstg:
+  - "Street_Fighter-neovatar"
+  - "Street Fighter: The Storytelling Game"
   - "Storytelling System"
 
 nwodvampire:
   - "Vampire the Requiem"
-  - "Vampire: The Requiem (nWoD)"
-  - "Storytelling System"
-
-cwodv20:
-  - "CWOD-V20"
-  - "Vampire: The Masquerade 20th Anniversary Edition (cWoD)"
+  - "Vampire: The Requiem"
   - "Storytelling System"
 
 werewolf2e:
-  - "CWOD-Werewolf"
-  - "Werewolf: The Apocalypse (cWoD)"
+  - "WerewolfTheForsaken2e"
+  - "Werewolf: The Forsaken 2nd Edition"
   - "Storytelling System"
 
-werewolf2e:
-- "WerewolfTheForsaken2e"
-- "Werewolf: The Forsaken 2nd Edition"
-- "Storytelling System"
-
-godmachine:
-  - "The God Machine Chronicle (nWoD)"
-  - "World of Darkness: The God Machine Chronicle (cWoD)"
-  - "Storytelling System"
+#STORYPATH
+scion2e:
+  - "Scion2e"
+  - "Scion Second Edition"
+  - "Storypath"
 
 #SVAVELVINTER
 svavelvinter:
@@ -927,6 +1252,11 @@ svavelvinter:
 swordsandwiz:
   - "Swords_&_Wizardry"
   - "Swords & Wizardry"
+  - "Swords & Wizardry"
+
+whitelies:
+  - "WhiteLies"
+  - "White Lies"
   - "Swords & Wizardry"
 
 #TAVERN TALES
@@ -956,9 +1286,19 @@ unknownponies:
 unknownarmies:
   - "UnknownArmies"
   - "Unknown Armies 2nd Edition"
-  - "Unknown Armies 2nd Edition"
+  - "Unknown Armies"
 
 #WARHAMMER 40,000 ROLEPLAY
+blackcrusade:
+  - "Black_Crusade"
+  - "Black Crusade"
+  - "Warhammer 40,000 Roleplay"
+
+warhammerblackcrusadeadv:
+- "Black Crusade Advanced API"
+- "Black Crusade Advanced"
+- "Warhammer 40,000 Roleplay"
+
 darkheresy:
   - "Dark_Heresy"
   - "Dark Heresy 1st Edition"
@@ -969,16 +1309,85 @@ darkheresy2e:
   - "Dark Heresy 2nd Edition"
   - "Warhammer 40,000 Roleplay"
 
+darkheresy2eadvanced:
+  - "Dark Heresy Advanced 2nd Edition"
+  - "Dark Heresy: 2nd Edition (Advanced API)"
+  - "Warhammer 40,000 Roleplay"
+
 deathwatch:
   - "Deathwatch"
   - "Deathwatch"
   - "Warhammer 40,000 Roleplay"
 
-#WARHHAMMMER FANTASY
+onlywar:
+  - "Only War"
+  - "Only War"
+  - "Warhammer 40,000 Roleplay"
+
+roguetrader:
+  - "Rogue_Trader"
+  - "Rogue Trader"
+  - "Warhammer 40,000 Roleplay"
+
+roguetraderfr:
+  - "Rogue_Trader_fr"
+  - "Rogue Trader (French)"
+  - "Warhammer 40,000 Roleplay"
+
+#WRATH AND GLORY
+wrathandglory:
+  - "Wrath and Glory API"
+  - "Wrath and Glory (API)"
+  - "Warhammer 40,000 Roleplay"
+
+40kwrathandglory:
+  - "Warhammer40k-WrathandGlory"
+  - "Wrath and Glory"
+  - "Warhammer 40,000 Roleplay"
+
+#WARHHAMMMER FANTASY 2ND EDITION
+warhammerfantasy2e:
+  - "Warhammer-Fantasy-Roleplay-2nd-Edition"
+  - "Warhammer Fantasy 2nd Edition"
+  - "Warhammer Fantasy Roleplay"
+
+warhammerfantasy2e_havoc:
+  - "WFRP2E-Havoc"
+  - "Warhammer Fantasy 2nd Edition (Havoc)"
+  - "Warhammer Fantasy Roleplay"
+
+warhammerfantasyv2fr:
+  - "Warhammer_v2_french"
+  - "Warhammer Fantasy 2nd Edition (French)"
+  - "Warhammer Fantasy Roleplay"
+
 warhammerfantasy:
   - "WFRP-2nd-Ed"
   - "Warhammer Fantasy 2nd Edition (Simple)"
   - "Warhammer Fantasy Roleplay"
+
+#WARHHAMMMER FANTASY 3RD EDITION
+wfrp3e:
+  - "wfrp3e"
+  - "Warhammer Fantasy 3rd Edition"
+  - "Warhammer Fantasy Roleplay"
+
+wfrp3eFR:
+  - "wfrp3e-French"
+  - "Warhammer Fantasy 3rd Edition (French)"
+  - "Warhammer Fantasy Roleplay"
+
+#WARHHAMMMER FANTASY 4TH EDITION
+wfrp4:
+  - "WFRP4CharSheet"
+  - "Warhammer Fantasy 4th Edition"
+  - "Warhammer Fantasy Roleplay"
+
+#WILD TALLENTS
+wildtalents: 
+  - "Wild Talents 2nd Edition"
+  - "Wild Talents 2nd Edition"
+  - "Wild Talents"
 
 #WITCH HUNTER
 witchhunter2e:
@@ -1022,7 +1431,7 @@ bluerose:
 pathfinder2e: 
   - "Pathfinder 2 Playtest by Roll20"
   - "Pathfinder 2 Playtest by Roll20"
-  - "Pathfinder 2nd Edition"
+  - "Pathfinder Second Edition"
   - hidden
 
 wodvtm5e: 
@@ -1036,6 +1445,12 @@ nwodwerewolf:
   - "Werewolf: The Forsaken (nWOD)"
   - "Storytelling System"
   - hidden
+
+werewolfapoc2e:
+  - "CWOD-Werewolf"
+  - "Werewolf: The Apocalypse"
+  - "Storyteller System"
+  - "hidden"
 
 monsterhearts: 
   - Monsterhearts-Simple
@@ -1325,238 +1740,28 @@ anneauunique:
   - "The One Ring"
   - "hidden"
 
-dungeonslayers:
-  - "Dungeon-slayers-4"
-  - "Dungeon Slayers 4th Edition"
-  - "Dungeonslayers"
-  - "hidden"
+trailcthuluSP:
+    - "Trail of Cthulhu (spanish)"
+    - "Trail of Cthulhu (Spanish)"
+    - "GUMSHOE"
+    - "hidden"
 
-numeneratwo:
-  - "Numenera_NathasNumenera_English"
-  - "Numenera (Tabbed)"
-  - "Cypher System"
-  - "hidden"  
-
-numeneratwofrench:
-  - "Numenera_NathasNumenera_French"
-  - "Numenera (French)"
-  - "Cypher System"
-  - "hidden"
-
-dnd35ecn:
-  - "D&D_3-5-CN"
-  - "D&D 3.5E (Chinese)"
-  - "Dungeons & Dragons 3.5 Edition"
-  - "hidden"
-
-dnd35efrench:
-  - "D&D_3-5-fr"
-  - "D&D 3.5E (French)"
-  - "Dungeons & Dragons 3.5 Edition"
-  - "hidden"
-
-dnd35eportuguese:
-  - "D&D_3-5-pt-br"
-  - "D&D 3.5E (Portuguese)"
-  - "Dungeons & Dragons 3.5 Edition"
-  - "hidden"
-
-dnd35espanish:
-  - "D&D_3-5 SPANISH"
-  - "D&D 3.5E (Spanish)"
-  - "Dungeons & Dragons 3.5 Edition"
-  - "hidden"
-
-dndnextactoba:
-  - "DnDNext_Actoba"
-  - "D&D Next *PLAYTEST RULES*"
-  - "Dungeons & Dragons 5th Edition"
-  - "hidden"
-
-dnd5eshaped:
-  - "5eShaped_legacy"
-  - "5th Edition (Shaped, Legacy)"
-  - "Dungeons & Dragons 5th Edition"
-  - "hidden"
-
-carbon2185:
-  - "carbon-2185-quickstart"
-  - "Carbon 2185 (quick start)"
-  - "Dungeons & Dragons 5th Edition"
-  - "hidden"
-
-eclipsephase:
-  - "Eclipse Phase"
-  - "Eclipse Phase"
-  - "Eclipse Phase"
-  - "hidden"
-
-fateacceleratednoapp:
-  - "Fate_Accelerated_No_Approaches"
-  - "Fate Accelerated Edition (No approaches)"
-  - "Fate"
-  - "hidden"
-
-fatecore:
-  - "Fate_Core"
-  - "Fate Core Edition"
-  - "Fate"
-  - "hidden"
-
-trailofcthgumshoe:
-  - "Gumshoe_TrailOfCthulhu"
-  - "Trail of Cthulhu (API-Compatible)"
+trailofcthfrench:
+  - "Trail of Cthulhu_french"
+  - "Trail of Cthulhu (French)"
   - "GUMSHOE"
   - "hidden"
 
-herogames6e:
-  - "Hero Games 6e"
-  - "Hero Games 6th Edition"
-  - "Hero Games"
+animafr:
+  - "Anima-Beyond-Fantasy-French"
+  - "Anima: Beyond Fantasy (French)"
+  - "Anima Beyond Fantasy"
   - "hidden"
 
-michtimfluffy:
-  - "Michtim Fluffy Adventures"
-  - "Michtim Fluffy Adventures"
-  - "Michtim Fluffy Adventures"
-  - "hidden"
-
-multiverse:
-  - "Multiverse"
-  - "Multiverse"
-  - "Multiverse"
-  - "hidden"
-
-neonsolitude:
-  - "NeonSolitude"
-  - "Neon Solitude"
-  - "Neon Solitude"
-  - "hidden"
-
-pathfindersimple:
-  - "pathfinder_simple"
-  - "Pathfinder (Simple Layout)"
-  - "Pathfinder"
-  - "hidden"
-
-pathfinderfrench:
-  - "Pathfinder-FR"
-  - "Pathfinder (French)"
-  - "Pathfinder"
-  - "hidden"
-
-pathfinderde:
-  - "Pathfinder-DE"
-  - "Pathfinder (German)"
-  - "Pathfinder"
-  - "hidden"
-
-pathfindersp:
-  - "Pathfinder (Spanish)"
-  - "Pathfinder (Spanish)"
-  - "Pathfinder"
-  - "hidden"
-
-shadowrun5e:
-  - "Shadowrun5e"
-  - "Shadowrun 5th Edition"
-  - "Shadowrun 5th Edition"
-  - "hidden"
-
-5eshadowrun: 
-  - "Shadowrun5e-Gerdofal"
-  - "Shadowrun 5th Edition"
-  - "Shadowrun 5th Edition"
-  - "hidden"
-
-shadowrungerman:
-  - "Shadowrun5D-german"
-  - "Shadowrun: 5th Edition (German)"
-  - "Shadowrun 5th Edition"
-  - "hidden"
-
-starfrontiers:
-  - "Star Frontiers"
-  - "Star Frontiers"
-  - "Star Frontiers"
-  - "hidden"
-
-shaan:
-  - "Shaan"
-  - "Shaan Renaissance"
-  - "Shaan Renaissance"
-  - "hidden"
-
-starfinderhud:
-  - "Starfinder HUD"
-  - "Starfinder HUD"
-  - "Starfinder"
-  - "hidden"
-
-bladesinthedark:
-  - "Blades-in-the-Dark"
-  - "Blades in the Dark"
-  - "Forged in the Dark"
-  - "hidden"
-
-bandofblades:
-  - "Band of Blades"
-  - "Band of Blades"
-  - "Forged in the Dark"
-  - "hidden"
-
-l5radvanced:
-  - "L5R Advanced"
-  - "Legend of the Five Rings (Advanced)"
-  - "Legend of the Five Rings"
-  - "hidden"
-
-thewitcher:
-  - "The Witcher"
-  - "The Witcher"
-  - "The Witcher"
-  - "hidden"
-
-dragonage:
-  - "Dragon Age RPG"
-  - "Dragon Age"
-  - "Fantasy AGE"
-  - "hidden"
-
-fantasyage:
-  - "Fantasy Age"
-  - "Fantasy Age"
-  - "Fantasy AGE"
-  - "hidden"
-
-titansgrave:
-  - "Titansgrave"
-  - "Titansgrave"
-  - "Fantasy AGE"
-  - "hidden"
-
-lancer:
-  - "LANCER RPG"
-  - "LancerRPG"
-  - "Lancer"
-  - hidden
-
-mutantyearzero:
-  - "Mutant-year-zero"
-  - "Mutant: Year Zero"
-  - "Year Zero Engine"
-  - "hidden"
-
-anneauunique:
-  - "Anneau Unique"
-  - "Anneau Unique - The One Ring (French)"
-  - "The One Ring"
-  - "hidden"
-
-dungeonslayers:
-  - "Dungeon-slayers-4"
-  - "Dungeon Slayers 4th Edition"
-  - "Dungeonslayers"
+animaspanish:
+  - "Anima-Beyond-Fantasy-Spanish"
+  - "Anima: Beyond Fantasy (Spanish)"
+  - "Anima Beyond Fantasy"
   - "hidden"
 
 
