--- a/approved.yaml
+++ b/approved.yaml
@@ -1409,7 +1409,7 @@ arkhamhorror:
 
 #DEPRECATED SHEETS
 #These sheets are no longer selectable in the menu
-#They are usuable by games that already have them selected
+#They are usuable by games already have them selected
 13thage: 
   - 13th_Age
   - "13th Age"
