uc-714 add new sheets

--- a/approved.yaml
+++ b/approved.yaml
@@ -1430,6 +1430,7 @@ runequest6es:
 degenesis:
 - "Degenesis"
 - "Degenesis"
+- "Degenesis"
 
 streetsofmarienburg:
 - "Streets_of_Marienburg"
@@ -3010,5 +3011,12 @@ wildtalents:
   - "Wild Talents Second Edition"
   - "Wild Talents Second Edition"
 
-
+cyberpunk2k20v2:
+   - "Cyberpunk2k20_v2"
+   - "Cyberpunk2k20 (Version 2)"
+   - "Interlock System"
   
+degenesis
+  - "Degenesis-henry4k"
+  - "Degenesis (Advanced)"
+  - "Degenesis"
