uc-714 fix typo in approve

--- a/approved.yaml
+++ b/approved.yaml
@@ -3016,7 +3016,7 @@ cyberpunk2k20v2:
    - "Cyberpunk2k20 (Version 2)"
    - "Interlock System"
   
-degenesis
+degenesisadvanced:
   - "Degenesis-henry4k"
   - "Degenesis (Advanced)"
   - "Degenesis"
