city of mist official

--- a/approved.yaml
+++ b/approved.yaml
@@ -80,9 +80,15 @@ bladesinthedarkadvancedofficial:
 - "Blades in the Dark by Evil Hat Productions"
 - "Forged in the Dark"
 
-bluebeardbride:
+bluebeardbrideofficial:
   - "Bluebeard's Bride"
   - "Bluebeard's Bride by Magpie Games"
+  - "Apocalypse World Engine"
+
+cityofmistproperofficial:
+- "City Of Mist Offical"
+- "City of Mist by Son of Oak Game Studio"
+- "Apocalypse World Engine"
 
 earthdawnofficial:
   - "Earthdawn (FASA Official)"
@@ -1907,11 +1913,6 @@ bigeyessmallmouth3esimple:
 cityofmist:
 - "City-of-Mist"
 - "City of Mist Community"
-- "Apocalypse World Engine"
-
-cityofmistproper:
-- "City Of Mist Offical"
-- "City of Mist"
 - "Apocalypse World Engine"
 
 callofcthulhuda:
