--- a/approved.yaml
+++ b/approved.yaml
@@ -80,12 +80,12 @@ bladesinthedarkadvancedofficial:
 - "Blades in the Dark by Evil Hat Productions"
 - "Forged in the Dark"
 
-bluebeardbrideofficial:
+bluebeardbride:
   - "Bluebeard's Bride"
   - "Bluebeard's Bride by Magpie Games"
   - "Apocalypse World Engine"
 
-cityofmistproperofficial:
+cityofmistproper:
 - "City Of Mist Offical"
 - "City of Mist by Son of Oak Game Studio"
 - "Apocalypse World Engine"
