--- a/approveBackup.yml
+++ b/approveBackup.yml
@@ -141,12 +141,6 @@ startrek2d20:
   - "Star Trek Adventures"
   - "2d20"
 
-#3D&T ALPHA
-threedandtalpha:
-  - "3D&T_ALPHA"
-  - "3D&T ALPHA (Portuguese)"
-  - "3D&T ALPHA"
-
 #13th AGE
 13thageadvanced:
   - "13th_Age-neovatar"
@@ -169,12 +163,6 @@ anima:
   - "Anima-Beyond-Fantasy"
   - "Anima: Beyond Fantasy"
   - "Anima Beyond Fantasy"
-
-#AMBER DICELESS ROLE-PLAYING
-lordsofgossamerandshadow:
-  - "Lords-Of-Gossamer-And-Shadow"
-  - "Lords of Gossamer and Shadow"
-  - "Amber Diceless Roleplaying Game"
 
 #APOCALYPSE WORLD ENGINE
 actionmovieworld:
@@ -204,7 +192,7 @@ cityofmist:
 
 cityofmistproper:
   - "City Of Mist Offical"
-  - "City of Mist by Son of Oak Game Studio"
+  - "City of Mist"
   - "Apocalypse World Engine"
 
 dungeonworld:
@@ -451,22 +439,6 @@ buriedtreasures:
   - "Buried Treasures"
   - "Buried Treasures"
 
-#CHRONIQUES OUBLIEES
-chroniquesgalactiques:
-  - "ChroniquesGalactiques"
-  - "Chroniques Galactiques (French)"
-  - "Chroniques Oubliées"
-
-chroniclesoubliees:
-  - "ChroniquesOubliees"
-  - "Chroniques Oubliées Fantasy (French)"
-  - "Chroniques Oubliées"
-
-chroniclesoublieescontemporain:
-  - "ChroniquesOublieesContemporain"
-  - "Chroniques Oubliees Contemporain"
-  - "Chroniques Oubliées"
-
 #CHRONICLE SYSTEM
 asoiaf:
   - "Song of Ice and Fire Roleplaying"
@@ -556,11 +528,6 @@ castlesandcrusades:
   - "Castles & Crusades"
   - "d20 System"
 
-conan2e:
-  - "Conan-2nd-Ed"
-  - "Conan 2nd Edition"
-  - "Conan 2nd Edition"
-
 starwarssaga:
   - "Star Wars Saga Edition"
   - "Star Wars Saga Edition"
@@ -609,17 +576,6 @@ dasschwarzeauge5tsa:
   - "Das_Schwarze_Auge_5_Tsa_Edition"
   - "Das Schwarze Auge 5th Edition (Tsa Edition)"
   - "Das Schwarze Auge"
-
-#DEGENESIS
-degenesis:
-  - "Degenesis"
-  - "Degenesis"
-  - "Degenesis"
-
-degenesisadvanced:
-  - "Degenesis-henry4k"
-  - "Degenesis (Advanced)"
-  - "Degenesis"
 
 #DUNGEONS & DRAGONS BASIC SET
 becmidnd:
@@ -727,12 +683,6 @@ dcctabbed:
   - "Dungeon Crawl Classics"
 
 #ECLIPSE PHASE
-
-#FALLOUT
-fallout:
-  - "Fallout"
-  - "Fallout 3.0"
-  - "Fallout"
 
 #FANTASY CRAFT
 fantasycraft:
@@ -846,29 +796,6 @@ turbofatede:
   - "Turbo Fate (German)"
   - "Fate"
 
-#FENG SHUI
-fengshui:
-  - "Feng Shui"
-  - "Feng Shui"
-  - "Feng Shui"
-
-fengshui2:
-  - "Feng-Shui-2"
-  - "Feng Shui 2"
-  - "Feng Shui"
-
-#FLASHING BLADES
-flashingblades:
-  - "Flashing_Blades"
-  - "Flashing Blades"
-  - "Flashing Blades"
-
-#FORGED IN THE DARK
-songsofthedusk:
-  - "Songs for the Dusk"
-  - "Songs for the Dusk"
-  - "Forged in the Dark"
-
 #THE FUGUE
 fugue:
   - "Fugue"
@@ -879,23 +806,6 @@ psipunk:
   - "Psi-Punk"
   - "Psi-Punk"
   - "The Fugue"
-
-#GAMMA WORLD
-gammaworld7e:
-  - "GammaWorld7e"
-  - "Gamma World: 7th Edition"
-  - "Gamma World 7th Edition"
-
-#GHOSTBUSTERS
-ghostbusters:
-  - "Ghostbusters"
-  - "Ghostbusters"
-  - "Ghostbusters"
-
-ghostbusterssp:
-  - "Ghostbusters Expanded Spanish"
-  - "Ghostbusters (Spanish)"
-  - "Ghostbusters"
 
 #GUMSHOE
 nightblackagents:
@@ -930,24 +840,7 @@ hackmaster5e:
   - "HackMaster 5th Edition"
   - "HackMaster 5th Edition"
 
-#ICONS
-iconsassembled:
-  - "Icons Assembled"
-  - "ICONS Assembled"
-  - "ICONS"
-
-iconsassembledfr:
-  - "Icons French"
-  - "ICONS Assembled (French)"
-  - "ICONS"
-
-#IRONCLAW
-ironclase:
-  - "Ironclaw"
-  - "Ironclaw"
-  - "Ironclaw"
-
-#IN NOMINE SATANIS
+#In Nomine Satanis Third Edition
 innominesatanis:
   - "INS-MV_3E"
   - "In Nomine Satanis / Magna Veritas Third Edition"
@@ -958,11 +851,6 @@ cyberpunk2020:
   - "Cyberpunk 2020"
   - "Cyberpunk 2020"
   - "Interlock System"
-
-cyberpunk2k20v2:
-   - "Cyberpunk2k20_v2"
-   - "Cyberpunk2k20 (Version 2)"
-   - "Interlock System"
 
 kromore:
   - "Kromore"
@@ -1046,12 +934,6 @@ mandm3e:
   - "Mutants and Masterminds 3rd Edition"
   - "Mutants and Masterminds"
 
-#MYRAID SONG
-myriadsong:
-  - "Myriad Song"
-  - "Myriad Song"
-  - "Myriad Song"
-
 #NARRATIVES UNLIMITED D10
 narrativesunlimitedd10:
   - "NarrativesUnlimitedD10"
@@ -1073,11 +955,6 @@ pathfinderneceros:
 pathfinderoldneceros:
   - "Pathfinder (Old)"
   - "Pathfinder (Legacy Layout)"
-  - "Pathfinder"
-
-pathfindercazra:
-  - "Pathfinder_Cazra"
-  - "Pathfinder (Simple)"
   - "Pathfinder"
 
 #PENDRAGON
@@ -1156,33 +1033,22 @@ savageworldsfo:
   - "Savage Worlds: Fallout"
   - "Savage Worlds"
 
-#SEVENTH SEA
-7thsea:
-  - "7th Sea"
-  - "7th Sea: 1st Edition"
-  - "Seventh Sea 1st Edition"
-
-7thsea2e:
-  - "7th Sea 2e"
-  - "7th Sea: 2nd Edition"
-  - "Seventh Sea 2nd Edition"
-
 #SHADOWRUN 2ND EDITION
 shadowrun2e:
   - "Shadowrun2e"
   - "Shadowrun 2nd Edition"
-  - "Shadowrun 2nd Edition"
+  - "Shadowrun"
 
 #SHADOWRUN 5TH EDITION
 shadowrun5thedition:
   - "Shadowrun5thEdition"
   - "Shadowrun 5th Edition"
-  - "Shadowrun 5th Edition"
+  - "Shadowrun"
 
 shadowrun5th: 
   - "Shadowrun5th"
   - "Shadowrun 5th Edition (Advanced)"
-  - "Shadowrun 5th Edition"
+  - "Shadowrun"
 
 #SHADOWRUN ANARCHY
 newshadowrunanarchy:
@@ -1195,12 +1061,6 @@ simplesystem:
   - "Simple System"
   - "Simple System"
   - "Simple System"
-
-#SPYCRAFT
-spycraft:
-  - "Spycraft_2.0"
-  - "Spycraft 2.0"
-  - "Spycraft"
 
 #STAR WARS
 sweote:
@@ -1399,23 +1259,11 @@ whitelies:
   - "White Lies"
   - "Swords & Wizardry"
 
-#SYMBAROUM
-symbaroum:
-  - "Symbaroum"
-  - "Symbaroum"
-  - "Symbaroum"
-
 #TAVERN TALES
 taverntales:
   - "Tavern-Tales"
   - "Tavern Tales"
   - "Tavern Tales"
-
-#TOON
-toon:
-  - "Toon"
-  - "Toon"
-  - "Toon"
 
 #TORG
 torg:
@@ -1429,17 +1277,6 @@ true20:
   - "True20"
   - "True20"
 
-#UNISYSTEM
-allfleshmustbeeaten:
-  - "Unisystem-All Flesh Must Be Eaten"
-  - "All Flesh Must Be Eaten"
-  - Unisystem
-
-unisystembuffyorangel:
-  - Unisystem-Buffy or Angel
-  - Buffy or Angel
-  - Unisystem
-
 #UNKNOWN ARMIES
 unknownponies:
   - "UnknownPonies"
@@ -1451,12 +1288,6 @@ unknownarmies:
   - "Unknown Armies 2nd Edition"
   - "Unknown Armies"
 
-#VOID
-thevoid:
-  - "the-void"
-  - "The Void"
-  - "Void"
-
 #WARHAMMER 40,000 ROLEPLAY
 blackcrusade:
   - "Black_Crusade"
@@ -1464,9 +1295,9 @@ blackcrusade:
   - "Warhammer 40,000 Roleplay"
 
 warhammerblackcrusadeadv:
-  - "Black Crusade Advanced API"
-  - "Black Crusade Advanced"
-  - "Warhammer 40,000 Roleplay"
+- "Black Crusade Advanced API"
+- "Black Crusade Advanced"
+- "Warhammer 40,000 Roleplay"
 
 darkheresy:
   - "Dark_Heresy"
@@ -1563,37 +1394,6 @@ witchhunter2e:
   - "Witch_Hunter_2e"
   - "Witch Hunter 2nd Edition"
   - "Witch Hunter"
-
-#YEAR ZERO ENGINE
-alienyz:
-  - "Alien Roleplaying Game"
-  - "Aliens"
-  - "Year Zero Engine"
-
-coriolis:
-  - "Coriolis"
-  - "Coriolis"
-  - "Year Zero Engine"
-
-forbiddenlands:
-  - "Forbidden_Lands"
-  - "Forbidden Lands"
-  - "Year Zero Engine"
-
-mutantyearzeroalt:
-  - "Mutant Year Zero Alternative"
-  - "Mutant: Year Zero Alternative"
-  - "Year Zero Engine"
-
-mutantyearzerov2:
-  - "Mutant Year Zero"
-  - "Mutant: Year Zero"
-  - "Year Zero Engine"
-
-talesfromtheloop:
-  - "Tales from the Loop"
-  - "Tales from the Loop / TFTF"
-  - "Year Zero Engine"
 
 #YOGSQUEST
 yogsquest:
@@ -1964,8 +1764,3 @@ animaspanish:
   - "Anima Beyond Fantasy"
   - "hidden"
 
-swordsandwizsp:
-  - "Swords_&_Wizardry Spanish"
-  - "Swords & Wizardry (Spanish)"
-  - "Swords & Wizardry"
-  - "hidden"
