saving progress. finished doctor who Vortex

--- a/approved.yaml
+++ b/approved.yaml
@@ -153,6 +153,11 @@ threedandtalpha:
   - "13th Age Legacy"
   - "Archmage Engine"
 
+eclipsespanish:
+  - "Eclipse"
+  - "Eclipse (Spanish)"
+  - "Archmage Engine"
+
 #AGE SYSTEM
 agesystem:
   - "AGE System"
@@ -422,6 +427,12 @@ stormbringer:
   - "Stormbringer"
   - "Stormbringer"
   - "Basic Roleplaying System"
+
+#BEER ENGINE
+koboldsbaby:
+  - "Kobolds Ate My Baby"
+  - "Kobolds Ate My Baby"
+  - "BEER Engine!"
 
 #BETTER ANGELS
 betterangels:
@@ -726,7 +737,22 @@ dcctabbed:
   - "Dungeon Crawl Classics (Tabbed)"
   - "Dungeon Crawl Classics"
 
+#DUNGEONS THE DRAGONING
+DtD40000:
+  - "Dungeons the Dragoning 40000 7th Edition"
+  - "Dungeons the Dragoning 40000 7th Edition"
+  - "Dungeons the Dragoning 40000 7th Edition"
+
 #ECLIPSE PHASE
+eclipsephasenew:
+  - Eclipse Phase Alternate
+  - Eclipse Phase
+  - Eclipse Phase
+
+eclipsephasev2:
+  - Eclipse Phase V2
+  - Eclipse Phase V2
+  - Eclipse Phase
 
 #FALLOUT
 fallout:
@@ -869,7 +895,7 @@ songsofthedusk:
   - "Songs for the Dusk"
   - "Forged in the Dark"
 
-#THE FUGUE
+#FUGUE
 fugue:
   - "Fugue"
   - "Fugue"
@@ -880,10 +906,38 @@ psipunk:
   - "Psi-Punk"
   - "The Fugue"
 
-#GAMMA WORLD
+#FUZION
+fuzion:
+  - "Fuzion"
+  - "Fuzion"
+  - "Fuzion"
+
+mektonzeta:
+  - "Mekton Z"
+  - "Mekton Zeta"
+  - "Fuzion"
+
+sengokufuzion:
+  - "Sengoku"
+  - "Sengoku Fuzion"
+  - "Fuzion"
+
+#GAMMA WORLD 1st EDITION
+gammaworld1e:
+  - GammaWorld1e
+  - "Gamma World 1st Edition"
+  - "Gamma World 1st Edition"
+
+#GAMMA WORLD 2nd EDITION
+gammaworld2e:
+  - "GammaWorld2e"
+  - "Gamma World 2nd Edition"
+  - "Gamma World 2nd Edition"
+
+#GAMMA WORLD 7th EDITION
 gammaworld7e:
   - "GammaWorld7e"
-  - "Gamma World: 7th Edition"
+  - "Gamma World 7th Edition"
   - "Gamma World 7th Edition"
 
 #GHOSTBUSTERS
@@ -929,6 +983,23 @@ hackmaster5e:
   - "HackMaster_5E"
   - "HackMaster 5th Edition"
   - "HackMaster 5th Edition"
+
+#HARRY POTTER TABLE TOP RPG
+harrypotter:
+  - "Harry Potter"
+  - "Harry Potter RPG"
+  - "Harry Potter and the Tabletop RPG"
+
+#HERO QUEST
+heroquest:
+  - "HeroQuest"
+  - "Hero Quest"
+  - "Hero Quest"
+
+heroquestglorantha:
+  - Heroquest_Glorantha
+  - HeroQuest Glorantha
+  - "Hero Quest"
 
 #ICONS
 iconsassembled:
@@ -1052,6 +1123,12 @@ myriadsong:
   - "Myriad Song"
   - "Myriad Song"
 
+#NAHEULBEUK
+naheulbeuk:
+  - "Naheulbeuk"
+  - "Le Donjon de Naheulbeuk (French)"
+  - "Le Donjon de Naheulbeuk"
+
 #NARRATIVES UNLIMITED D10
 narrativesunlimitedd10:
   - "NarrativesUnlimitedD10"
@@ -1063,6 +1140,17 @@ theonering:
   - "The One Ring"
   - "The One Ring"
   - "The One Ring"
+
+#PARANOIA
+paranoia:
+  - "Paranoia"
+  - "Paranoia"
+  - "Paranoia"
+
+paranoiamongoose:
+- "Paranoia_Mongoose"
+- "Paranoia (Mongoose)"
+- "Paranoia Mongoose"
 
 #PATHFINDER
 pathfinderneceros:
@@ -1097,11 +1185,40 @@ ptu:
   - "Pokemon Tabletop United"
   - "Pokemon Tabletop United"
 
+#POKEROLE SYSTEM
+pokerole:
+  - "Pokerole"
+  - "Pokerole"
+  - "Pokerole System"
+
+#POKEMON TABLETOP ADVENTURES
+pokemonadventure:
+  - "PokemonTabletopAdventures"
+  - "Pokemon Tabletop Adventures" 
+  - "Pokemon Tabletop Adventures"
+
+pokemonadventuresunmoon:
+  - "PokemonTabletopAdventures - Sun & Moon"
+  - "Pokemon Tabletop Adventures - Sun & Moon"
+  - "Pokemon Tabletop Adventures"
+
 #PORTES MONSTRES TRESORS
 portesmonstrestresors:
   - "PortesMonstresTresors"
   - "Portes Monstres Tresors (French)"
   - "Portes Monstres Tresors"
+
+#RENAISSANCE
+cwrenaissance:
+  - "CakebreadWaltonRenaissance"
+  - "Renaissance"
+  - "Renaissance"
+
+#RISUS SPACE OPERA
+risus: 
+  - "Risus Space Opera"
+  - "Risus Space Opera"
+  - "Risus Space Opera"
 
 #ROLL AND KEEP SYSTEM
 legendofthefiverings:
@@ -1129,6 +1246,17 @@ rolemasterstandard:
   - "Rolemaster-Standard-System"
   - "Rolemaster Standard System"
   - "Rolemaster Standard System"
+
+#SAGA
+dragonlance:
+  - Dragonlance 5th Age
+  - "Dragonlance: Fifth Age"
+  - "SAGA"
+
+marvelsaga:
+  - "Marvel_Saga"
+  - "Marvel Saga"
+  - "SAGA"
 
 #SAVAGE WORLDS
 exo2933:
@@ -1451,11 +1579,23 @@ unknownarmies:
   - "Unknown Armies 2nd Edition"
   - "Unknown Armies"
 
+#V6 ENGINE
+atomichighway:
+  - "Atomic Highway"
+  - "Atomic Highway"
+  - "V6 Engine"
+
 #VOID
 thevoid:
   - "the-void"
   - "The Void"
   - "Void"
+
+#VORTEX
+doctorwho:
+  - "Doctor Who Adventures in Time and Space"
+  - "Doctor Who RPG"
+  - "Vortex"
 
 #WARHAMMER 40,000 ROLEPLAY
 blackcrusade:
