--- a/approved.yaml
+++ b/approved.yaml
@@ -577,32 +577,15 @@ starwarssaga:
   - "Star Wars Saga Edition"
   - "d20 System"
  
+ starwarsrevised:
+  - "Star Wars Revised RPG"
+  - "Star Wars Revised"
+  - "d20 System"
+
 ironkingdoms:
   - "Iron Kingdoms RPG"
   - "Iron Kingdoms"
   - "d20 System"
-
-#ADVANCED DUNGEONS & DRAGONS
-adnd1e:
-  - "AD&D_1E"
-  - "Advanced 1st Edition"
-  - "Advanced Dungeons & Dragons"
-
-theblackhack:
-    - "Black Hack"
-    - "The Black Hack"
-    - "Advanced Dungeons & Dragons"
-
-#ADVANCED DUNGEONS & DRAGONS 2nd Edition
-adndte:
-  - "AD&D_2E"
-  - "Advanced 2nd Edition (Simple Sheet)"
-  - "Advanced Dungeons & Dragons"
-
-adnd2erevised:
-  - "AD&D 2E Revised"
-  - "Advanced 2nd Edition"
-  - "Advanced Dungeons & Dragons"
 
 #DAS SCHWARZE AUGE 4th EDITION
 dasschwarzeauge:
@@ -631,6 +614,34 @@ degenesisadvanced:
   - "Degenesis-henry4k"
   - "Degenesis (Advanced)"
   - "Degenesis"
+
+#D&D RETROCLONE
+lotfp:
+  - "Lotfp"
+  - "Lamentations of the Flame Princess"
+  - "D&D Retroclone"
+
+#ADVANCED DUNGEONS & DRAGONS
+adnd1e:
+  - "AD&D_1E"
+  - "Advanced 1st Edition"
+  - "Advanced Dungeons & Dragons"
+
+theblackhack:
+    - "Black Hack"
+    - "The Black Hack"
+    - "Advanced Dungeons & Dragons"
+
+#ADVANCED DUNGEONS & DRAGONS 2nd Edition
+adndte:
+  - "AD&D_2E"
+  - "Advanced 2nd Edition (Simple Sheet)"
+  - "Advanced Dungeons & Dragons"
+
+adnd2erevised:
+  - "AD&D 2E Revised"
+  - "Advanced 2nd Edition"
+  - "Advanced Dungeons & Dragons"
 
 #DUNGEONS & DRAGONS BASIC SET
 becmidnd:
@@ -726,6 +737,11 @@ elderscrolls:
   - "Unofficial Elder Scrolls Tabletop"
   - "Dungeons & Dragons 5th Edition"
 
+starwars5e:
+  - "StarWars5E"
+  - "Star Wars 5e"
+  - "Dungeons & Dragons 5th Edition"
+
 #DUNGEON CRAWL CLASSICS
 dcc:
   - "DCC"
@@ -742,6 +758,18 @@ DtD40000:
   - "Dungeons the Dragoning 40000 7th Edition"
   - "Dungeons the Dragoning 40000 7th Edition"
   - "Dungeons the Dragoning 40000 7th Edition"
+
+#DUNGEON SQUAD
+dungeonsquad:
+  - "DungeonSquad"
+  - "Dungeon Squad"
+  - "Dungeon Squad"
+
+#EARTHDAWN
+earthdawn4e:
+  - "Earthdawn-4E"
+  - "Earthdawn 4th Edition"
+  - "Earthdawn 4th Edition"
 
 #ECLIPSE PHASE
 eclipsephasenew:
@@ -830,6 +858,11 @@ fatebasico:
 achtungcthulhu:
   - "Achtung! Cthulhu"
   - "Achtung! Cthulhu"
+  - "Fate"
+
+demonhunters: 
+  - "Demon Hunters Beta"
+  - "Demon Hunters"
   - "Fate"
 
 diaspora:
@@ -1148,9 +1181,9 @@ paranoia:
   - "Paranoia"
 
 paranoiamongoose:
-- "Paranoia_Mongoose"
-- "Paranoia (Mongoose)"
-- "Paranoia Mongoose"
+  - "Paranoia_Mongoose"
+  - "Paranoia (Mongoose)"
+  - "Paranoia Mongoose"
 
 #PATHFINDER
 pathfinderneceros:
@@ -1167,6 +1200,21 @@ pathfindercazra:
   - "Pathfinder_Cazra"
   - "Pathfinder (Simple)"
   - "Pathfinder"
+
+tormentarpg:
+  - "TormentaRPG"
+  - "Tormenta (Portuguese)"
+  - "Pathfinder"
+
+tormentatabbed:
+  - "TormentaRPG_Tabbed"
+  - "Tormenta (Tabbed)"
+  - "Pathfinder"
+
+tormentarpgnew:
+  - TormentaRPG-PDF_Based
+  - Tormenta RPG (New)
+  - Pathfinder
 
 #PENDRAGON
 pendragon:
@@ -1253,6 +1301,12 @@ dragonlance:
   - "Dragonlance: Fifth Age"
   - "SAGA"
 
+#Sage Machine
+shadowssol:
+  - "Shadows Over Sol"
+  - "Shadows Over Sol"
+  - "Saga Machine"
+
 marvelsaga:
   - "Marvel_Saga"
   - "Marvel Saga"
@@ -1295,6 +1349,12 @@ savageworldsfo:
   - "7th Sea: 2nd Edition"
   - "Seventh Sea 2nd Edition"
 
+#SHADOW OF THE DEMON LORD
+sotdl:
+  - "Shadow of the Demon Lord"
+  - "Shadow of the Demon Lord"
+  - "Shadow of the Demon Lord"
+
 #SHADOWRUN 2ND EDITION
 shadowrun2e:
   - "Shadowrun2e"
@@ -1336,6 +1396,16 @@ sweote:
   - "Star Wars FFG (Simple)"
   - "Star Wars Roleplaying Game"
 
+starwarseoteapi:
+  - "Star Wars FFG API-Compatible"
+  - "Star Wars: FFG (API-Compatible)"
+  - "Star Wars Roleplaying Game"
+
+sweotefr:
+  - "Star Wars EotEmpire_Dice - FR"
+  - "Star Wars: FFG (French)"
+  - "Star Wars Roleplaying Game"
+
 #STARS WITHOUT NUMBER
 starswithoutnumber:
   - "Stars_Without_Number"
@@ -1356,6 +1426,12 @@ otherdust:
   - "Other_Dust"
   - "Other Dust"
   - "Stars Without Number"
+
+#STRIKE
+strike:
+  - "Strike!"
+  - "Strike!"
+  - "Strike!"
 
 #STORYTELLER SYSTEM
 aberrant:
@@ -1539,6 +1615,12 @@ taverntales:
   - "Tavern Tales"
   - "Tavern Tales"
 
+#TENRA BANSHO ZERO
+tenrazero:
+  - "Tenra Bansho Zero"
+  - "Tenra Bansho Zero"
+  - "Tenra Bansho Zero"
+
 #TOON
 toon:
   - "Toon"
@@ -1549,6 +1631,11 @@ toon:
 torg:
   - "Torg"
   - "Torg"
+  - "Torg"
+
+torgeternity:
+  - "Torg Eternity"
+  - "Torg Eternity"
   - "Torg"
 
 #TRUE 20
@@ -2108,4 +2195,10 @@ swordsandwizsp:
   - "Swords_&_Wizardry Spanish"
   - "Swords & Wizardry (Spanish)"
   - "Swords & Wizardry"
+  - "hidden"
+
+delve: 
+  - "Delve"
+  - "Delve"
+  - "Delve"
   - "hidden"
