--- a/approved.yaml
+++ b/approved.yaml
@@ -519,6 +519,11 @@ numenera:
   - "Numenera"
   - "Cypher System"
 
+nothankyouevil:
+  - "No Thank You Evil"
+  - "No Thank You, Evil"
+  - "Cypher System"
+
 thestrangemutlirecursion:
   - "TheStrangeMultiRecursion"
   - "The Strange (Multiple Recursion)"
@@ -1017,11 +1022,28 @@ hackmaster5e:
   - "HackMaster 5th Edition"
   - "HackMaster 5th Edition"
 
+#HARN
+harn:
+  - "harnmaster"
+  - "Harn"
+  - "Harn"
+
+harnmaster3:
+  - HarnMaster3
+  - Harn Master 3
+  - "Harn Master 3rd Edition"
+
 #HARRY POTTER TABLE TOP RPG
 harrypotter:
   - "Harry Potter"
   - "Harry Potter RPG"
   - "Harry Potter and the Tabletop RPG"
+
+#HC SVNT DRACONES
+hcsvntdracones:
+  - "Hc Svnt Dracones"
+  - "Hc Svnt Dracones"
+  - "Hc Svnt Dracones"
 
 #HERO QUEST
 heroquest:
